﻿2009-1-20	服务器恢复了，代码也恢复了。朋友们说twisted改动比较大，那就先调试一下socket的能不能用，比较顺利调好了，传一个上来。

2006-10-8	修改登陆包，确定服务器地址。修改了一处处理流水号的错误。不会接收多次同样消息了。

2006-7-22	修改数据包为2006，并修改了根登陆服务器地址。

2005-10-9	增加了对群消息的处理，将Python-QQ-bri做了两个群的桥接。

2005-09-26	将tea算法部分的中文注释提交上来了。

2005-09-10	能发送消息了，不过不稳定。

2005-09-09	增加了qqlib的部分注释。对qqlib的处理方法做了小调整。

2005-09-09	修改了GUI部分，能得到好友列表了，但是发送消息未完成。

2005-09-09	修改了GUI部分，能够正常登陆了。

2005-09-08	增加了对发送消息不成功的判断，但是未自动重发。

2005-08-11	增加了qq.login属性，为1时登陆成功。

2005-08-01	修改了消息处理方式，目前只处理了好友消息和陌生人消息。修正了改变当前状态的一处错误。

2005-07-30	按照limodou和其他朋友的提意，将编码改变为UTF-8，并通过os模块本程序自动在win和*uix下切换编码。将qqlib独立处理，分别进行控制台和图形界面的分工工作。hhgs.efhilt@gmail.com朋友提供了一个gui的程序，但是没有调试通过。将输入密码的地方使用了getpass模块。加上了登陆成功的提示。

2005-07-29	yxxyun@gmail.com朋友的提醒下，发现了一个命令定义错误。更改过来。

2005-07-28	因为朋友们反映在linux下不能使用，于是进行测试，发现2.3不支持某种方法的字典操作，更改update方法后，在FreeBSD 5.3下运行成功。

2005-07-27	释放出第一个版本，环境支持需要Python 2.4 以及twisted 2.01。目前实现的功能有：登陆、发送活动包、列好友、列在线好友、发送消息、接受好友消息、退出登陆。